Fix image address

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <table class="row collapse"><tbody><tr>
         <th class="no-bottom-padding small-12 large-12 columns first last"><table><tr><th>
             <a href="mailto:Cortnie.Gurren@voyagersopris.com?subject=RSVP%20for%20Savoy%20Bar%20and%20Grill,%20November%205,%202019"><img src="assets/img/New-Mexico-APS-RFP_06.png" width="600" alt="RSVP NOW Cortnie.Gurren@voyagersopris.com"></a>
-            <a href="https://www.voyagersopris.com"><img src="../assets/img/New-Mexico-APS-RFP_07.png" alt="" width="600"></a>
+            <a href="https://www.voyagersopris.com"><img src="assets/img/New-Mexico-APS-RFP_07.png" alt="" width="600"></a>
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
