Fix subject preview

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     </tr></tbody></table>
 </td></tr></tbody></table>
 
-<div class="preview-subject float-center" align="center"><strong>SUBJECT:</strong> You Are Invited - Help Literacy Educators Support Struggling Readers<br><strong>HIDDEN
-        TEASER:</strong> LETRS can ensure your reading teachers are trained for HB230.</div>
+<div class="preview-subject float-center" align="center"><strong>SUBJECT:</strong> You Are Invited: Help Literacy Educators Support Struggling Readers<br><strong>HIDDEN
+        TEASER:</strong> <em>LETRS</em> can ensure your reading teachers are trained for HB230.</div>
 
 			</center>
 		</td>
