--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <table align="center" class="container float-center"><tbody><tr><td>
     <table pardot-repeatable="" class="row collapse"><tbody><tr>
         <th class="no-bottom-padding small-12 large-12 columns first last" pardot-region="header_image"><table><tr><th>
-            <a href="http://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q3_REG_NM_APS_RFP"><img src="assets/img/New-Mexico-APS-RFP_01.png" width="600" style="font-size: 24px;line-height:30px;background-color:#005587;color:#ffffff;text-align:center;" alt=""></a>
+            <a href="http://www.voyagersopris.com?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q3_REG_NM_APS_RFP"><img src="https://go.voyagersopris.com/l/207592/2019-09-26/9ym5n/207592/121251/New_Mexico_APS_RFP_01.png" width="600" style="font-size: 24px;line-height:30px;background-color:#005587;color:#ffffff;text-align:center;" alt=""></a>
         </th></tr></table></th>
     </tr></tbody></table>
     <table pardot-repeatable="" class="row"><tbody><tr>
@@ -33,16 +33,15 @@
             <p>Dear %%first_name%%,</p>
             <p>Join us for lunch and an engaging exploration of our <a href="https://www.voyagersopris.com/professional-development/letrs/letrs-new?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q3_REG_NM_APS_RFP" target="_blank" rel="noopener noreferrer"><em><strong>LETRS</strong></em><sup>&reg;</sup></a>
                 <em>(Language Essentials for Teachers of Reading and Spelling)</em> literacy PD solution with special
-                guests, education specialist Toni Backstrom and
-                Bloomfield Public Schools’ literacy coach Kelly Marquez. We are also excited to announce <strong>
-                    <em>LETRS</em> is
-                    approved as district-wide literacy PD for Albuquerque Public Schools
-                </strong>.</p>
-            <p><em>LETRS</em> is in alignment with <a href="https://improvingliteracy.org/state-of-dyslexia/new-mexico">HB230</a> legislation as the New Mexico Department of Education requires local
-                school districts to ensure every teacher and administrator who teaches reading is trained to provide and
-                implement appropriate research-based reading intervention.</p>
-            <p>Discover how <em>LETRS</em> professional development can support literacy teachers and help the struggling readers
-                in your district.</p>
+                guests, education specialist Toni Backstrom and Bloomfield Public Schools’ literacy coach Kelly Marquez.
+                We are also excited to announce <strong> <em>LETRS</em> is approved as district-wide literacy PD for
+                    Albuquerque Public Schools</strong>.</p>
+            <p><em>LETRS</em> is in alignment with <a href="https://improvingliteracy.org/state-of-dyslexia/new-mexico">HB230</a> legislation as the New
+                Mexico Department of Education requires local school districts to ensure every teacher and administrator
+                who teaches reading is trained to provide and implement appropriate research-based reading intervention.
+            </p>
+            <p>Discover how <em>LETRS</em> professional development can support literacy teachers and help the
+                struggling readers in your district.</p>
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
             <center data-parsed=""><table class="button radius float-center"><tr><td><table><tr><td><a href="mailto:Cortnie.Gurren@voyagersopris.com?subject=RSVP%20for%20Savoy%20Bar%20and%20Grill,%20November%205,%202019">RSVP NOW &raquo;</a></td></tr></table></td></tr></table></center>
 
@@ -51,21 +50,21 @@
     </tr></tbody></table>
     <table pardot-repeatable="" class="row collapse"><tbody><tr>
         <th class="no-bottom-padding small-12 large-12 columns first last" pardot-region="header_image"><table><tr><th>
-            <img src="assets/img/New-Mexico-APS-RFP_03.png" alt="">
+            <img src="https://go.voyagersopris.com/l/207592/2019-09-26/9ym4z/207592/121231/New_Mexico_APS_RFP_03.png" width="600" alt="">
         </th></tr></table></th>
     </tr></tbody></table>
     <table class="row collapse"><tbody><tr>
         <th class="no-bottom-padding small-12 large-6 columns first"><table><tr><th>
-            <img src="assets/img/New-Mexico-APS-RFP_04.png" width="300" alt="Tuesday, November 5, 2019 11 a.m.–1 p.m. Lunch will be served.">
+            <img src="https://go.voyagersopris.com/l/207592/2019-09-26/9ym5g/207592/121245/New_Mexico_APS_RFP_04.png" width="300" alt="Tuesday, November 5, 2019 11 a.m.–1 p.m. Lunch will be served.">
         </th></tr></table></th>
         <th class="no-bottom-padding small-12 large-6 columns last"><table><tr><th>
-            <a href="http://savoyabq.com/private-semi-private-rooms/"><img src="assets/img/New-Mexico-APS-RFP_05.png" width="300" alt="Savoy Bar & Grill Napa Room 10601 Montgomery Blvd. Northeast Albuquerque, NM 87111 505.294.9463"></a>
+            <a href="http://savoyabq.com/private-semi-private-rooms/"><img src="https://go.voyagersopris.com/l/207592/2019-09-26/9ym5b/207592/121241/New_Mexico_APS_RFP_05.png" width="300" alt="Savoy Bar & Grill Napa Room 10601 Montgomery Blvd. Northeast Albuquerque, NM 87111 505.294.9463"></a>
         </th></tr></table></th>
     </tr></tbody></table>
     <table class="row collapse"><tbody><tr>
         <th class="no-bottom-padding small-12 large-12 columns first last"><table><tr><th>
-            <a href="mailto:Cortnie.Gurren@voyagersopris.com?subject=RSVP%20for%20Savoy%20Bar%20and%20Grill,%20November%205,%202019"><img src="assets/img/New-Mexico-APS-RFP_06.png" width="600" alt="RSVP NOW Cortnie.Gurren@voyagersopris.com"></a>
-            <a href="https://www.voyagersopris.com"><img src="assets/img/New-Mexico-APS-RFP_07.png" alt="" width="600"></a>
+            <a href="mailto:Cortnie.Gurren@voyagersopris.com?subject=RSVP%20for%20Savoy%20Bar%20and%20Grill,%20November%205,%202019"><img src="https://go.voyagersopris.com/l/207592/2019-09-26/9ym5d/207592/121243/New_Mexico_APS_RFP_06.png" width="600" alt="RSVP NOW Cortnie.Gurren@voyagersopris.com"></a>
+            <a href="https://www.voyagersopris.com"><img src="https://go.voyagersopris.com/l/207592/2019-09-26/9ym56/207592/121237/New_Mexico_APS_RFP_07.png" alt="" width="600"></a>
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
@@ -100,8 +99,8 @@
     </tr></tbody></table>
 </td></tr></tbody></table>
 
-<div class="preview-subject float-center" align="center"><strong>SUBJECT:</strong> You Are Invited: Help Literacy Educators Support Struggling Readers<br><strong>HIDDEN
-        TEASER:</strong> <em>LETRS</em> can ensure your reading teachers are trained for HB230.</div>
+<div class="preview-subject float-center" align="center"><strong>SUBJECT:</strong> You Are Invited - Help Literacy Educators Support Struggling Readers<br><strong>HIDDEN
+        TEASER:</strong> LETRS can ensure your reading teachers are trained for HB230.</div>
 
 			</center>
 		</td>
