--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>Dear %%first_name%%,</p>
             <p>Join us for lunch and an engaging exploration of our <a href="https://www.voyagersopris.com/professional-development/letrs/letrs-new?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q3_REG_NM_APS_RFP" target="_blank" rel="noopener noreferrer"><em><strong>LETRS</strong></em><sup>&reg;</sup></a>
                 <em>(Language Essentials for Teachers of Reading and Spelling)</em> literacy PD solution with special
-                guests, education specialist Toni Backstrom and Bloomfield Public Schools’ literacy coach Kelly Marquez.
+                guests, education specialist Toni Backstrom and Bloomfield Public Schools’ literacy coach Kelley Marquez.
                 We are also excited to announce <strong> <em>LETRS</em> is approved as district-wide literacy PD for
                     Albuquerque Public Schools</strong>.</p>
             <p><em>LETRS</em> is in alignment with <a href="https://improvingliteracy.org/state-of-dyslexia/new-mexico">HB230</a> legislation as the New
