--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="date=no">
     <meta name="format-detection" content="address=no">
     <meta name="format-detection" content="email=no">
-    <title>You Are Invited: Help Literacy Educators Support Struggling Readers</title>
+    <title>You Are Invited - Help Literacy Educators Support Struggling Readers</title>
     <style>
         @media only screen {
             html {
@@ -158,6 +158,7 @@
                                                                     <strong><em>LETRS</em> is approved as district-wide
                                                                         literacy PD for Albuquerque Public
                                                                         Schools</strong>.</p>
+                                                                <!--[if mso]><div>&nbsp;</div><![endif]-->
                                                                 <p
                                                                     style="Margin:0;Margin-bottom:16px;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0;margin-bottom:16px;padding:0;text-align:left">
                                                                     <em>LETRS</em> is in alignment with <a
@@ -168,6 +169,7 @@
                                                                     every teacher and administrator who teaches reading
                                                                     is trained to provide and implement appropriate
                                                                     research-based reading intervention.</p>
+                                                                <!--[if mso]><div>&nbsp;</div><![endif]-->
                                                                 <p
                                                                     style="Margin:0;Margin-bottom:16px;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0;margin-bottom:16px;padding:0;text-align:left">
                                                                     Discover how <em>LETRS</em> professional development
@@ -239,12 +241,12 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                    <table class="row collapse"
-                                        style="border-collapse:collapse;border-spacing:0;display:table;padding:0;position:relative;text-align:left;vertical-align:top;width:100%">
+                                    <table class="row collapse blue-bg"
+                                        style="background:#1e63af;border-collapse:collapse;border-spacing:0;display:table;padding:0;position:relative;text-align:left;vertical-align:top;width:100%">
                                         <tbody>
                                             <tr style="padding:0;text-align:left;vertical-align:top">
-                                                <th class="no-bottom-padding small-12 large-6 columns first"
-                                                    style="Margin:0 auto;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0 auto;padding:0;padding-bottom:0!important;padding-left:0;padding-right:0;text-align:left;width:308px">
+                                                <th class="no-bottom-padding blue-bg small-12 large-6 columns first"
+                                                    style="Margin:0 auto;background:#1e63af;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0 auto;padding:0;padding-bottom:0!important;padding-left:0;padding-right:0;text-align:left;width:308px">
                                                     <table
                                                         style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%">
                                                         <tr style="padding:0;text-align:left;vertical-align:top">
@@ -258,8 +260,8 @@
                                                         </tr>
                                                     </table>
                                                 </th>
-                                                <th class="no-bottom-padding small-12 large-6 columns last"
-                                                    style="Margin:0 auto;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0 auto;padding:0;padding-bottom:0!important;padding-left:0;padding-right:0;text-align:left;width:308px">
+                                                <th class="no-bottom-padding blue-bg small-12 large-6 columns last"
+                                                    style="Margin:0 auto;background:#1e63af;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0 auto;padding:0;padding-bottom:0!important;padding-left:0;padding-right:0;text-align:left;width:308px">
                                                     <table
                                                         style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%">
                                                         <tr style="padding:0;text-align:left;vertical-align:top">
@@ -278,8 +280,8 @@
                                             </tr>
                                         </tbody>
                                     </table>
-                                    <table class="row collapse"
-                                        style="border-collapse:collapse;border-spacing:0;display:table;padding:0;position:relative;text-align:left;vertical-align:top;width:100%">
+                                    <table class="row collapse blue-bg"
+                                        style="background:#1e63af;border-collapse:collapse;border-spacing:0;display:table;padding:0;position:relative;text-align:left;vertical-align:top;width:100%">
                                         <tbody>
                                             <tr style="padding:0;text-align:left;vertical-align:top">
                                                 <th class="no-bottom-padding small-12 large-12 columns first last"
@@ -294,8 +296,29 @@
                                                                         src="https://go.voyagersopris.com/l/207592/2019-09-26/9ym5d/207592/121243/New_Mexico_APS_RFP_06.png"
                                                                         width="600"
                                                                         alt="RSVP NOW Cortnie.Gurren@voyagersopris.com"
-                                                                        style="-ms-interpolation-mode:bicubic;border:none;clear:both;display:block;max-width:100%;outline:0;text-decoration:none;width:auto"></a><a
-                                                                    href="https://www.voyagersopris.com"
+                                                                        style="-ms-interpolation-mode:bicubic;border:none;clear:both;display:block;max-width:100%;outline:0;text-decoration:none;width:auto"></a>
+                                                            </th>
+                                                            <th class="expander"
+                                                                style="Margin:0;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0;padding:0!important;text-align:left;visibility:hidden;width:0">
+                                                            </th>
+                                                        </tr>
+                                                    </table>
+                                                </th>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <table class="row"
+                                        style="border-collapse:collapse;border-spacing:0;display:table;padding:0;position:relative;text-align:left;vertical-align:top;width:100%">
+                                        <tbody>
+                                            <tr style="padding:0;text-align:left;vertical-align:top">
+                                                <th class="no-bottom-padding small-12 large-12 columns first last"
+                                                    style="Margin:0 auto;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0 auto;padding:0;padding-bottom:0!important;padding-left:16px;padding-right:16px;text-align:left;width:584px">
+                                                    <table
+                                                        style="border-collapse:collapse;border-spacing:0;padding:0;text-align:left;vertical-align:top;width:100%">
+                                                        <tr style="padding:0;text-align:left;vertical-align:top">
+                                                            <th
+                                                                style="Margin:0;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:1.4;margin:0;padding:0;text-align:left">
+                                                                <a href="https://www.voyagersopris.com"
                                                                     style="Margin:0;color:#005587;font-family:Helvetica,Arial,sans-serif;font-weight:400;line-height:1.4;margin:0;padding:0;text-align:left;text-decoration:underline"><img
                                                                         src="https://go.voyagersopris.com/l/207592/2019-09-26/9ym56/207592/121237/New_Mexico_APS_RFP_07.png"
                                                                         alt="" width="600"
